--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,19 @@
     background-color: #1B1B1B;
     color: white;
 }
+.modal-body .table {
+  font-family: Poppins, sans-serif;
+  font-size: 14px;
+}
+
+.modal-body .table th,
+.modal-body .table td {
+  text-align: center;
+}
+
 
 @media (max-width: 768px) {
     .card {
         height: auto;
     }}  
-
-    
+  
